Update sudo.java